<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/email_address"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />


            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_value"
                android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/spinner_1"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:entries="@array/users">


        </Spinner>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/rating_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/feedback"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_value"
            android:inputType="textMultiLine"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonsave"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp"
            android:text="@string/send_button"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>