<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/colorPrimary"
            android:text="DEVELOPERS"
            android:textAlignment="center"
            android:textSize="30sp"/>


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage1"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    app:srcCompat="@drawable/ankit"
                    android:scaleType="fitXY"/>


                <TextView
                    android:id="@+id/name1"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_3"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email1"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_3"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage2"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name2"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_4"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email2"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_4"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage3"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/jelwin" />


                <TextView
                    android:id="@+id/name3"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_1"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email3"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage4"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name4"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_5"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email4"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_5"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage5"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name5"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_6"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email5"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_6"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage6"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/shushruth" />


                <TextView
                    android:id="@+id/name6"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_2"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email6"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_2"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>


